--- a/style.css
+++ b/style.css
@@ -2,8 +2,94 @@ body{
 
 
   font-family: sans-serif;
-  font-size: 20px;
+  font-weight: bolder;
+  font-size: 30px;
+  color: #333;
+  background-color: #65bd74;
+  margin: 0;
+  padding: 0;
+
+}
+
+.cb {
+
+
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  border: 0.1em solid #333;
+  border-radius: 0.2em;
+  background-color: white;
+  transition: all 0.3s ease-in;
+  outline: none;
+
+  &:checked {
+    background-color: #333;
+    border-color: #333;
+  }
+
+  &:focus {
+    border-color: #333;
+    box-shadow: 0 0 1px #333;
+  }
+
+  &:hover {
+    border-color: #333;
+  }
+
 
 
 }
 
+
+
+
+
+.mybutton {
+
+    background-color: #0b1929;
+    color: white;
+    border: none;
+    padding: 10px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+
+    border-radius: 30px;
+    
+    &:hover {
+        background-color: #0069d9;
+    }
+}
+
+
+
+
+/* layout */
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
