--- a/style.css
+++ b/style.css
@@ -1,95 +1,65 @@
 body{
-
-
-  font-family: sans-serif;
-  font-weight: bolder;
-  font-size: 30px;
-  color: #333;
-  background-color: #65bd74;
-  margin: 0;
-  padding: 0;
+background-color: rgb(204, 206, 169);
 
 }
 
-.cb {
+.card{
+  background-color: #222;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button{
+  background-color: #008CBA;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.btn:hover{
+  background-color: #00678B;
+
+}
 
 
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  border: 0.1em solid #333;
-  border-radius: 0.2em;
-  background-color: white;
-  transition: all 0.3s ease-in;
-  outline: none;
+select {
+  background-color: #333;
+  color: #fff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 16px;
+  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+}
 
-  &:checked {
-    background-color: #333;
-    border-color: #333;
+
+p {
+  font-size: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #101010;
+  color: #E6E6E6;
+  animation: glowing 2s ease-in-out infinite alternate;
+  font-family: 'Sansita', sans-serif;
+}
+
+@keyframes glowing {
+  0% {
+    background-color: #098cd2;
+    color: #ffffff;
   }
-
-  &:focus {
-    border-color: #333;
-    box-shadow: 0 0 1px #333;
+  100% {
+    background-color: #ffffff;
+    color: #1586c3;
   }
-
-  &:hover {
-    border-color: #333;
-  }
-
-
-
 }
 
-
-
-
-
-.button {
-
-    background-color: #0b1929;
-    color: white;
-    border: none;
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-
-    border-radius: 30px;
-    
-    &:hover {
-        background-color: #0069d9;
-    }
-}
-
-
-
-
-/* layout */
-
-body {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-}
-
-main {
-    flex: 1;
-}
-
-header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
-
-footer {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-}
